# MPC_differential

./: .gitignore
src/mini_sim/mini_description/: CMakeLists.txt  package.xml
src/mini_sim/mini_description/config/: joint_names_mini_description.yaml
src/mini_sim/mini_description/launch/: display.launch  gazebo.launch
src/mini_sim/mini_description/urdf/: mini_description.csv  mini_description.urdf  mini_description.urdf.xacro
src/mini_sim/mini_gazebo/launch/: simulation_camera.launch
src/mpc_ctrl/: CMakeLists.txt  package.xml
src/mpc_ctrl/config/: mpc_ctrl.rviz
src/mpc_ctrl/include/: qp.hpp
src/mpc_ctrl/launch/: mpc_simulation.launch
src/mpc_ctrl/src/: mpc_node.cc  mpc_node.cpp  trajectory_publisher.py
